# DBFxSQL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  tmp.dbf  tmp.sql
dbf2sql_sync/: __init__.py  __main__.py
dbf2sql_sync/controller/: file_controller.py
dbf2sql_sync/database/: dbf_connection.py  dbf_queries.py  sql_connection.py  sql_queries.py
dbf2sql_sync/helpers/: util.py
dbf2sql_sync/models/: entities.py  exceptions.py
dbfxsql/: __init__.py  __main__.py  cli.py
dbfxsql/constants/: config.py  data_types.py  default_config.py  sample_commands.py  sql_libraries.py
dbfxsql/exceptions/: __init__.py  connection_errors.py  error_template.py  field_errors.py  folderpath_errors.py  record_errors.py  row_errors.py  source_errors.py  table_errors.py  value_errors.py
dbfxsql/helpers/: alias.py  file_manager.py  formatters.py  utils.py  validators.py
dbfxsql/models/: __init__.py  condition.py  config.py  engine.py  error_template.py  lazy_group.py  order_commands.py  relation.py  signal_process.py  sync_table.py  watch_modified.py
dbfxsql/modules/: __init__.py
dbfxsql/modules/dbf/: dbf_connection.py  dbf_controller.py  dbf_queries.py
dbfxsql/modules/sql/: sql_connection.py  sql_controller.py  sql_queries.py
dbfxsql/modules/sql/mssql_queries/: create  insert
dbfxsql/modules/sql/sqlite_queries/: delete  fetch_row  fetch_types  (+6 more)
dbfxsql/modules/sync/: sync_connection.py  sync_controller.py  sync_queries.py  sync_services.py
examples/: dbf_preview.py  sql_preview.py  sync_preview.py
test/: test_dbf.py  test_sql.py
(+39 files in other folders)
